--- a/app/views/productList/productList.html
+++ b/app/views/productList/productList.html
@@ -1,3 +1,8 @@
 <h2>Our Great Products</h2>
 <!-- ng-repeat over each product in our controller -->
-{{products}}
+<product 
+    ng-repeat="product in products" 
+    product='product'
+    button-label="Buy Now! C'mon"
+    button-action='addItem(product)'>
+</product>
